# WhiteFox

./: .gitignore  1  1.json  1.py  2.py  BUG.md  README.md  build_db.sh  conf.py  config.yaml  d_model.py  getAST.py  getTorchAPICall.py  gpt4.py  gpt4_gen.py  gpt4_gencode.py  llm_client.py  logger.py  prompt_gen.py  pyproject.toml  rag_exp.sh  rag_exp_2.sh  rag_exp_eval.sh  req.txt  run_query.sh  s1.sh  s2-new.sh  s2.sh  s3.sh  spec_to_code.sh  starcoder_service.py  sync_torch_code.sh  vllm.sh
experiment/: token_count.py
optim/: inductor-fuse.json  inductor-graph-pattern.json  inductor-quant.json
optim-0/: oplist.txt  optinfo.yaml
prompt-1-new/: torch._dynamo.backends.common.json  torch._dynamo.backends.cudagraphs.json  torch._dynamo.backends.debugging.json  torch._dynamo.backends.distributed.json  torch._dynamo.backends.onnxrt.json  torch._dynamo.backends.registry.json  torch._dynamo.backends.torchxla.json  torch._dynamo.backends.tvm.json  torch._dynamo.bytecode_analysis.json  torch._dynamo.bytecode_transformation.json  torch._dynamo.compiled_autograd.json  torch._dynamo.config.json  torch._dynamo.convert_frame.json  torch._dynamo.eval_frame.json  torch._dynamo.graph_utils.json  torch._dynamo.guards.json  torch._dynamo.output_graph.json  torch._dynamo.symbolic_convert.json  torch._export.passes.constant_folding.json  torch._export.passes.lift_constants_pass.json  torch._functorch.aot_autograd.json  torch._functorch.compile_utils.json  torch._functorch.compilers.json  torch._functorch.config.json  torch._higher_order_ops.cond.json  torch._higher_order_ops.map.json  torch._higher_order_ops.scan.json  torch._higher_order_ops.while_loop.json  torch._inductor.async_compile.json  torch._inductor.codecache.json  torch._inductor.compile_fx.json  torch._inductor.config.json  torch._inductor.debug.json  (+24 more)
src/: conf.py  (+4 more)
(+1583 files in other folders)
