[project]
name = "whitefox"
version = "0.1.0"
description = ""
authors = [
    {name = "syheliel",email = "syheliel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "z3-solver (>=4.14.1.0,<5.0.0.0)",
    "openai (>=1.71.0,<2.0.0)",
    "transformers (>=4.51.0,<5.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "click (>=8.1.8,<9.0.0)",
    "coverage (>=7.8.0,<8.0.0)",
    "astunparse (>=1.6.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
