[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "syheliel",email = "syheliel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "z3-solver (>=4.14.1.0,<5.0.0.0)",
    "openai (>=1.71.0,<2.0.0)",
    "transformers (>=4.50.0,<4.51.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "click (>=8.1.8,<9.0.0)",
    "coverage (>=7.8.0,<8.0.0)",
    "astunparse (>=1.6.3,<2.0.0)",
    "setuptools (>=78.1.0,<79.0.0)",
    "intel-extension-for-pytorch (>=2.6.0,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "graphviz (>=0.20.3,<0.21.0)",
    "chromadb (>=1.0.4,<2.0.0)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "langchain-voyageai (>=0.1.4,<0.2.0)",
    "tlparse (>=0.3.39,<0.4.0)"
]

[tool.poetry.scripts]
get_opt = "src.kg.get_optinfo:main"
opt_to_prompt = "src.kg.optinfo_to_prompt:main"
prompt_to_spec = "src.kg.prompt_to_spec:main"
spec_to_code = "src.kg.spec_to_code:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

